[tool.poetry]
name = "ner"
version = "0.1.0"
description = ""
authors = ["danielle.benbashat <danielle.benbashat@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
onnx2kerastl = "^0.0.164"
datasets = "^2.21.0"
transformers = "^4.44.2"
matplotlib = "3.7.3"
code-loader-helpers = "^1.0.20"
code-loader = "1.0.143.dev4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
